--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "gulp": "gulp",
-    "gulp-watch":"gulp watch"
+    "gulp-watch": "gulp watch",
+    "babel": "babel src/script -d build/src",
+    "webpack": "webpack"
   },
   "repository": {
     "type": "git",
@@ -19,12 +21,27 @@
   },
   "homepage": "https://github.com/yayi-anywehere/gulpStudy#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
     "del": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
-    "gulp-clean-css": "^3.9.4"
+    "gulp-clean-css": "^3.9.4",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
+    "react": "^16.4.0",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.11.0",
+    "webpack-cli": "^3.0.2",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "gulp-less": "^3.5.0"
+    "gulp-less": "^3.5.0",
+    "react-dom": "^16.4.0"
   }
 }
